# Meicu3D

./: README.md  main.cpp  meson.build
Airy/: AiryEngine.cpp  AiryEngine.hpp  AiryGlobalContext.cpp  AiryGlobalContext.hpp  AiryMaterial.cpp  AiryMaterial.hpp  AiryMaterialPass.hpp  AiryMesh.cpp  AiryMesh.hpp  AiryMeshRenderer.cpp  AiryMeshRenderer.hpp  AiryProgram.cpp  AiryProgram.hpp  AiryScene.cpp  AiryScene.hpp  AiryShader.cpp  AiryShader.hpp  AiryVertexDataStream.hpp  meson.build
Airy/Assets/: AiryAssets.h.in  meson.build
Airy/Assets/Shaders/: Triangle.fs  Triangle.vs  meson.build
Airy/Components/: AiryCamera.cpp  AiryCamera.hpp  AiryMeshRenderer.cpp  AiryMeshRenderer.hpp
Airy/Data/: AiryMaterial.hpp  AiryMaterialPass.cpp  AiryMaterialPass.hpp  AiryMesh.cpp  AiryMesh.hpp  AiryProgram.cpp  AiryProgram.hpp  AiryRenderContext.hpp  AiryShader.hpp  AiryTransform.hpp  AiryVertexDataStream.hpp
Airy/ECS/: AiryComponent.cpp  AiryComponent.hpp  AiryEntity.cpp  AiryEntity.hpp  AirySystem.cpp  AirySystem.hpp
Airy/Pervasives/: AiryObject.hpp
Airy/Systems/: AiryRenderSystem.cpp  AiryRenderSystem.hpp
Tests/: AiryECSTest.cpp  meson.build
